--- a/README.rdoc
+++ b/README.rdoc
@@ -1,9 +1,9 @@
-= mongoid_auto_inc
-Add SQL like auto-incrementing fields to your Mongoid documents.  
+= mongoid_auto_increment
+Add SQL like auto-incrementing fields to your Mongoid documents.
 
 This gem is inspired by http://ihswebdesign.com/blog/autoincrement-in-mongodb-with-ruby/ and the mongomapper_id2[https://github.com/phstc/mongomapper_id2] gem.
 == Install
-  gem install mongoid_auto_inc
+  gem install mongoid_auto_increment
 == Usage
 Just add <tt>auto_increment :field</tt> to your Mongoid model where <tt>:field</tt> is the name of the auto-incremented field you want to create.
 Example:
