--- a/README.rdoc
+++ b/README.rdoc
@@ -1,26 +1,55 @@
-= mongoid_auto_increment
-Add SQL like auto-incrementing fields to your Mongoid documents.
+= Mongoid::AutoIncrement
 
+Add SQL like auto-incrementing fields to your Mongoid documents.
 This gem is inspired by http://ihswebdesign.com/blog/autoincrement-in-mongodb-with-ruby/ and the mongomapper_id2[https://github.com/phstc/mongomapper_id2] gem.
-== Install
-  gem install mongoid_auto_increment
-== Usage
+
+== Installation
+
+Add to Gemfile:
+
+    gem 'mongoid_auto_increment'
+
+== Getting Started
+
 Just add <tt>auto_increment :field</tt> to your Mongoid model where <tt>:field</tt> is the name of the auto-incremented field you want to create.
 Example:
-  class Book
-    include Mongoid::Document
 
-    field :title
-    field :author
+    class Book
+      include Mongoid::Document
 
-    auto_increment :sequence
-  end
+      field :title
+      field :author
+
+      auto_increment :sequence
+    end
+
 <tt>auto_increment :sequence</tt> will create a field of type <tt>Integer</tt> named <tt>sequence</tt> for <tt>Book</tt>.  Whenever an instance of the model is created (intially saved to mongoDB), the <tt>auto_increment</tt> field will automatically be set to the next number in the sequence.
 
 You can add more than one auto-incremented field per model.
+
 === Options
-  auto_increment :sequence, :collection => :some_collection
+
+    auto_increment :sequence, :collection => :some_collection
+
 <tt>mongoid_auto_inc</tt> keeps track of the current number in the sequence by creating a separate document mongoDB to query and update.  By default <tt>auto_increment</tt> will save this document to a mongoDB collection called <tt>sequences</tt>.  If you wish to save to a different collection use the <tt>:collection</tt> option to specify its name.
 
-  auto_increment :sequence, :seed => 3333
+    auto_increment :sequence, :seed => 3333
+
 Use the <tt>:seed</tt> option to set the initial value of the auto-incremented field.  The first number assigned from the sequence will be the next number after the seed value.
+
+== Contributing to Mongoid::AutoIncrement
+
+* Check out the latest master to make sure the feature hasn't been implemented or the bug hasn't been fixed yet
+* Check out the issue tracker to make sure someone already hasn't requested it and/or contributed it
+* Fork the project
+* Start a feature/bugfix branch
+* Commit and push until you are happy with your contribution
+* Make sure to add tests for it. This is important so I don't break it in a future version unintentionally.
+* Please try not to mess with the Rakefile, version, or history. If you want to have your own version, or is otherwise necessary, that is fine, but please isolate to its own commit so I can cherry-pick around it.
+
+== Copyright
+
+(c) 2011 Peter Savichev (proton)
+(c) 2010-2011 Jeff Smith
+
+See LICENSE.txt for further details.
