added travis-ci status to README

--- a/README.rdoc
+++ b/README.rdoc
@@ -3,6 +3,8 @@
 Add SQL like auto-incrementing fields to your Mongoid documents.
 This gem is inspired by http://ihswebdesign.com/blog/autoincrement-in-mongodb-with-ruby/ and the mongomapper_id2[https://github.com/phstc/mongomapper_id2] gem.
 
+{<img src="https://secure.travis-ci.org/proton/mongoid_auto_increment.png" />}[http://travis-ci.org/proton/mongoid_auto_increment]
+
 == Installation
 
 Add to Gemfile:
